--- a/dashboard.html
+++ b/dashboard.html
@@ -44,6 +44,25 @@
             background-color: #f8f9fa;
             margin-top: 20px;
         }
+        .response-box {
+            display: flex;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .response-box input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .response-box button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
@@ -70,6 +89,10 @@
             <strong>Jane Smith</strong>: Meeting at 3 PM<br>
             <small>9:45 AM</small>
         </div>
+        <div class="response-box">
+            <input type="text" placeholder="Type your response here...">
+            <button>Send</button>
+        </div>
     </section>
 
     <section id="whatsapp">
@@ -78,6 +101,10 @@
             <img src="images/user-avatar.png" alt="User Avatar" width="30">
             <strong>Alice Johnson</strong>: Hey, what's up?<br>
             <small>11:00 AM</small>
+        </div>
+        <div class="response-box">
+            <input type="text" placeholder="Type your response here...">
+            <button>Send</button>
         </div>
     </section>
 
@@ -88,6 +115,10 @@
             <strong>Bob Brown</strong>: Check out this photo!<br>
             <small>12:00 PM</small>
         </div>
+        <div class="response-box">
+            <input type="text" placeholder="Type your response here...">
+            <button>Send</button>
+        </div>
     </section>
 
     <section id="facebook">
@@ -96,6 +127,10 @@
             <img src="images/user-avatar.png" alt="User Avatar" width="30">
             <strong>Charlie Davis</strong>: Happy Birthday!<br>
             <small>1:00 PM</small>
+        </div>
+        <div class="response-box">
+            <input type="text" placeholder="Type your response here...">
+            <button>Send</button>
         </div>
     </section>
 
