--- a/message_detail.html
+++ b/message_detail.html
@@ -25,6 +25,25 @@
         section {
             padding: 20px;
         }
+        .response-box {
+            display: flex;
+            gap: 10px;
+            margin-top: 20px;
+        }
+        .response-box input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .response-box button {
+            padding: 10px 20px;
+            background-color: #007bff;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -46,10 +65,10 @@
         <h2>Message from John Doe</h2>
         <p>Hello, how are you?</p>
         <small>10:30 AM</small>
-        <form action="#">
-            <button type="submit">Send</button>
-            <button type="button">Cancel</button>
-        </form>
+        <div class="response-box">
+            <input type="text" placeholder="Type your response here...">
+            <button>Send</button>
+        </div>
     </section>
 
     <section>
